Correction sélecteurs au clic du bouton J'aime + modification de l'animation pour input type checkbox en version mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,14 @@ p {
   cursor: pointer;
   position: relative;
 }
+.like--mobile {
+  display: block;
+}
+.like__checkbox {
+  pointer-events: none;
+  opacity: 0;
+  position: absolute;
+}
 .like__icon {
   color: #101010;
   font-size: 22px;
@@ -97,12 +105,15 @@ p {
 .like__icon-none {
   opacity: 1;
 }
-.like:active__icon--liked {
+.like__checkbox:checked ~ .like__icon--liked {
   opacity: 1;
   transform: scale(1);
 }
-.like:active__icon-none {
+.like__checkbox:checked ~ .like__icon-none {
   opacity: 0;
+}
+.like--desktop {
+  display: none;
 }
 
 .badge {
@@ -176,12 +187,18 @@ p {
 }
 /****** Large device (desktop) ***********/
 @media (min-width: 1025px) {
-  .like:hover__icon--liked {
+  .like--desktop {
+    display: block;
+  }
+  .like:hover .like__icon--liked {
     opacity: 1;
     transform: scale(1);
   }
-  .like:hover__icon-none {
+  .like:hover .like__icon-none {
     opacity: 0;
+  }
+  .like--mobile {
+    display: none;
   }
   .header {
     padding: 30px 0;
@@ -313,6 +330,7 @@ p {
 }
 .restaurants__card-img {
   border-radius: 15px 15px 0 0;
+  display: block;
   width: 100%;
   height: 170px;
 }
@@ -339,7 +357,7 @@ p {
 }
 .restaurants__like {
   position: absolute;
-  right: 20px;
+  right: 25px;
   bottom: 30px;
 }
 
