--- a/sass/partials/_homepage.scss
+++ b/sass/partials/_homepage.scss
@@ -124,6 +124,7 @@
 
     &__card-img {
         border-radius: 15px 15px 0 0;
+        display: block;
         width: 100%;
         height: 170px;
 
@@ -157,7 +158,7 @@
 
     &__like {
         position: absolute;
-        right: 20px;
+        right: 25px;
         bottom: 30px;
     }
 }
